--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@mdx-js/mdx": "^1.6.19",
+    "@mdx-js/react": "^1.6.19",
     "eslint-plugin-jsx-a11y": "^6.3.1",
-    "gatsby": "^2.24.67",
+    "gatsby": "^2.24.80",
     "gatsby-image": "^2.4.20",
     "gatsby-plugin-manifest": "^2.4.33",
+    "gatsby-plugin-mdx": "^1.2.51",
     "gatsby-plugin-offline": "^3.2.30",
     "gatsby-plugin-react-helmet": "^3.3.12",
     "gatsby-plugin-sharp": "^2.6.38",
@@ -40,7 +43,7 @@
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
-    "start": "npm run develop",
+    "start": "yarn develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "npm run type-check && npm run lint",
