--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "eslint": "^7.11.0",
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-react": "^7.21.4",
+    "gatsby-plugin-scss-typescript": "^4.0.13",
+    "node-sass": "^4.14.1",
     "prettier": "^2.1.2",
     "typescript": "^4.0.3"
   },
