feat: add type-checking watch script

--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "clean": "gatsby clean",
     "test": "npm run type-check && npm run lint",
     "lint": "eslint . --ext .ts,.tsx",
-    "type-check": "tsc --pretty"
+    "type-check": "tsc --pretty",
+    "type-check:watch": "yarn type-check -- --watch"
   },
   "repository": {
     "type": "git",
