--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,6 @@
     "arrowParens": "avoid",
     "semi": false,
     "tabWidth": 4,
-    "trailingComma": "none"
+    "trailingComma": "none",
+    "singleQuote": true
 }
